2001-01-24  Akim Demaille  <akim@epita.fr>

	* autoscan.pl (@kinds, %generic_macro): New.
	(&init_tables): Use them.
	* acheaders: Run `autoconf -t AC_CHECK_HEADERS:'$1'' on the fileutils,
	and include all these headers in here.
	Don't specify `AC_CHECK_HEADERS' as it's the default.

2001-01-24  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: Just like the previous patch, but for
	AC_CHECK_FUNCS, AC_CHECK_TYPES, and AC_CHECK_MEMBERS.

	
2001-01-24  Akim Demaille  <akim@epita.fr>

	* autoscan.pl (print_unique): Push all the macro invocation
	locations.
	(output_headers): For headers that need to be checked, push either
	the specialized macro, or the generic macro call.
	(check_configure_ac): Handle AC_CHECK_HEADERS.

	
2001-01-24  Raja R Harinath  <harinath@cs.umn.edu>

	Some non-srcdir build fixes.
	* configure.in (BUGS): Look for file in $srcdir.
	* tests/Makefile.am (MACRO_FILES): Use '..', not '$(top_srcdir)'.

2001-01-24  Akim Demaille  <akim@epita.fr>

	Don't AC_SUBST too much, as it makes Automake include those
	variables in Makefiles, and drives autoscan to require unneeded
	programs.

	* acgeneral.m4 (_AC_INIT_PREPARE): Don't AC_SUBST CFLAGS,
	CPPFLAGS, CXXFLAGS and LDFLAGS.
	(AC_ARG_VAR): AC_SUBST the var.
	Document it only once, even if there are several different docs.
	* aclang.m4 (AC_PROG_CPP): Declare CPP and CPPFLAGS to AC_ARG_VAR.
	(AC_PROG_CXXCPP): Declare CXXCPP and CPPFLAGS.

2001-01-24  Akim Demaille  <akim@epita.fr>

	* m4sugar.m4 (m4_expand_once): Accept a witness.

2001-01-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_EXPAND_ONCE): Remove, use m4_expand_once.
	(AC_DIVERT_ONCE): Move to...
	* m4sugar.m4 (m4_expand_once): here.

2001-01-23  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_LANG_SET): Turn off optimizations.

2001-01-23  Akim Demaille  <akim@epita.fr>

	* configure.in: If this is a beta, dump the core of BUGS.
	* tests/base.at (AC_REQUIRE & AC_LANG): New test, currently failing.
